Button animations. Added "button hover effect" and fix the z-index issue.

--- a/3_CreativeButtons/style.css
+++ b/3_CreativeButtons/style.css
@@ -1,5 +1,5 @@
 body {
-    height: 100vh;
+    min-height: 100vh;
     /*display: grid;*/
     /*grid-template-columns: 1fr 1fr 1fr;*/
     /*gap: 1rem;*/
@@ -26,7 +26,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: -10;
+}
+
+.isolate {
+    isolation: isolate;
 }
 
 .bg-white {
@@ -36,6 +39,7 @@ body {
 }
 
 /******** ROTATE BG  **********/
+
 #rotate_bg {
     text-decoration: none;
     color: #272727;
@@ -562,6 +566,68 @@ body {
     transform: scale(1);
     transition-delay: 0.4s;
 }
+
+/******************* BUTTON HOVER EFFECT ******************/
+
+#hover_effect {
+    text-decoration: none;
+    width: 300px;
+    height: 60px;
+    text-transform: uppercase;
+    background: transparent;
+    text-align: center;
+    line-height: 60px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    position: relative;
+    transition: all 0.2s;
+    color: white;
+}
+
+#hover_effect:hover {
+    color: #272727;
+}
+
+#hover_effect::before {
+    content: "";
+    position: absolute;
+    top: -3px;
+    left: -3px;
+    width: 100%;
+    height: 100%;
+    background-color: #20caff;
+    z-index: -1;
+    mix-blend-mode: multiply;
+    transition: all 0.2s;
+    transform-origin: top;
+}
+
+#hover_effect:hover::before {
+    top: -6px;
+    left: 0;
+    transform: perspective(1000px) rotateX(75deg);
+}
+
+#hover_effect::after {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 100%;
+    height: 100%;
+    background-color: #ff7675;
+    z-index: -1;
+    mix-blend-mode: multiply;
+    transition: all 0.2s;
+    transform-origin: bottom;
+}
+
+#hover_effect:hover::after {
+    top: 6px;
+    left: 0;
+    transform: perspective(1000px) rotateX(-75deg);
+}
+
 
 
 
